# pixi-solve-strategy-bug

./: README.md  pixi.toml  pyproject.toml
