[project]
name = "my-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vecko", email = "36369090+VeckoTheGecko@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-package = "my_package:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
